--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "brace": "^0.11.1",
-    "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-react-helmet": "^2.0.10",
+    "gatsby": "^2.0.70",
+    "gatsby-link": "^2.0.7",
+    "gatsby-plugin-react-helmet": "^3.0.4",
+    "react": "^16.6.3",
     "react-ace": "^6.1.1",
+    "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-highlight": "^0.12.0",
     "styled-components": "^3.2.6"
@@ -20,7 +22,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write 'src/**/*.js'",
+    "format": "prettier --write 'src/pages/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
