--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "brace": "^0.11.1",
-    "gatsby": "^2.18.4",
-    "gatsby-link": "^2.2.25",
-    "gatsby-plugin-react-helmet": "^3.1.16",
-    "react": "^16.12.0",
-    "react-ace": "^6.6.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-highlight": "^0.12.0",
-    "styled-components": "^3.4.10"
+    "brace": "latest",
+    "gatsby": "latest",
+    "gatsby-link": "latest",
+    "gatsby-plugin-react-helmet": "latest",
+    "react": "latest",
+    "react-ace": "latest",
+    "react-dom": "latest",
+    "react-helmet": "latest",
+    "react-highlight": "latest",
+    "styled-components": "latest"
   },
   "keywords": [
     "gatsby"
@@ -26,6 +26,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "latest"
   }
 }
