--- a/package.json
+++ b/package.json
@@ -4,6 +4,24 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+"@date-io/moment": "^1.3.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
+    "bootstrap": "^4.5.3",
+    "chart.js": "latest",
+    "history": "^4.10.1",
+    "immutability-helper": "^2.8.1",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.31",
+    "prop-types": "^15.7.2",
+    "querystring": "^0.2.0",
+    "react-autosuggest": "latest",
+    "react-bootstrap": "latest",
+    "react-chartjs-2": "latest",
+    "react-datetime": "latest",
+    "react-rte": "^0.16.3",
     "brace": "latest",
     "gatsby": "latest",
     "gatsby-link": "latest",
@@ -24,8 +42,5 @@
     "develop": "gatsby develop",
     "format": "prettier --write 'src/pages/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "prettier": "latest"
   }
 }
