--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-"@date-io/moment": "^1.3.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.12",
-    "bootstrap": "^4.5.3",
+    "@date-io/moment": "latest",
+    "@fortawesome/fontawesome-svg-core": "latest",
+    "@fortawesome/free-solid-svg-icons": "latest",
+    "@fortawesome/react-fontawesome": "latest",
+    "bootstrap": "latest",
     "chart.js": "latest",
-    "history": "^4.10.1",
-    "immutability-helper": "^2.8.1",
-    "lodash": "^4.17.20",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.31",
-    "prop-types": "^15.7.2",
-    "querystring": "^0.2.0",
+    "history": "latest",
+    "immutability-helper": "latest",
+    "lodash": "latest",
+    "moment": "latest",
+    "moment-timezone": "latest",
+    "prop-types": "latest",
+    "querystring": "latest",
     "react-autosuggest": "latest",
     "react-bootstrap": "latest",
     "react-chartjs-2": "latest",
     "react-datetime": "latest",
-    "react-rte": "^0.16.3",
+    "react-rte": "latest",
     "brace": "latest",
     "gatsby": "latest",
     "gatsby-link": "latest",
