--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "history": "latest",
-    "prop-types": "latest",
-    "querystring": "latest",
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "brace": "latest",
     "gatsby": "latest",
     "gatsby-link": "latest",
     "gatsby-plugin-react-helmet": "latest",
+    "history": "latest",
+    "prop-types": "latest",
+    "querystring": "latest",
     "react": "latest",
     "react-ace": "latest",
     "react-dom": "latest",
     "react-helmet": "latest",
-    "react-highlight": "latest",
-    "styled-components": "latest"
+    "react-highlight": "latest"
   },
   "keywords": [
     "gatsby"
