--- a/package.json
+++ b/package.json
@@ -4,20 +4,16 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
-    "brace": "latest",
     "gatsby": "latest",
     "gatsby-link": "latest",
     "gatsby-plugin-react-helmet": "latest",
-    "history": "latest",
     "prop-types": "latest",
-    "querystring": "latest",
     "react": "latest",
-    "react-ace": "latest",
+    "react-codemirror": "^1.0.0",
     "react-dom": "latest",
-    "react-helmet": "latest",
+    "react-helmet": "^6.1.0",
     "react-highlight": "latest"
   },
   "keywords": [
